Fix delete buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,36 @@
+<!-- GENERAL STYLES -->
+
 .mv-dn-30 {
 	margin-top: 30px;
 }
 
 .bg-lgray {
 	background-color: #EEEEEE;
+}
+
+
+<!-- BUDGETS.PHP TABLE LAYOUT STYLES -->
+
+#item-name {
+	td-width: 20%;
+}
+
+#item-category {
+	td-width: 15%;
+}
+
+#item-tag {
+	td-width: 15%
+}
+
+#item-amount {
+	td-width: 25%
+}
+
+#item-note {
+	td-width: 20%;
+}
+
+#item-delete {
+	td-width: 5%;
 }
