--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -1,5 +1,9 @@
 /* GENERAL STYLES */
 
+@media screen and (max-width: 768px) {
+    body { padding-top: 40px; }
+}
+
 .pad-20 {
 	padding: 20px 20px 20px 20px;
 }
