Improving cancel and delete buttons for edit tag and edit category screens

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -1,5 +1,6 @@
 /* GENERAL STYLES */
 
+/* Used to keep navbar from overlapping page content on phone-size devices */
 @media screen and (max-width: 768px) {
     body { padding-top: 40px; }
 }
